# ledriver-firmware

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  package.json  partitions.csv  sdkconfig  tsconfig.json  webpack.config.js
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/ledc/: ledc.c  ledc.h
main/ota/: manifest.c  manifest.h  ota.c  ota.h  webpanel.c  webpanel.h
main/util/: sntp.c  sntp.h
main/utils/: device.c  device.h  sntp.c  tools.h
main/webpanel/: httpd.c  partition.c  partition.h  resource.c  resource.h
main/webpanel/endpoints/: config_power.c  config_update.c  control_color.c  control_power.c  device_info.c  device_reboot.c  get_ota.c  get_resource.c  static.c  ws_rgb_update.c
main/wifi/: station.c
ota_server/: release.js  server.js
tools/: ota_server.js
webpanel/: index.tsx
webpanel/public/: index.html
webpanel/src/: device.ts  index.tsx  utils.ts
webpanel/src/config/: device.ts
webpanel/src/control/: color.ts  power.ts
